# rvspecfit

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  FINAL_GPU_REPORT.md  FINAL_STATUS.md  GPU_FINAL_REPORT.md  GPU_IMPLEMENTATION_SUMMARY.md  GPU_INTEGRATION_COMPLETE.md  GPU_README.md  GPU_SPEEDUP_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  NEXT_STEPS.md  PERFORMANCE_SUMMARY.md  QUICKSTART_GPU.md  README  README.md  config.yaml  fitter_ccf.py  make_ccf.py  make_interpol.py  make_nd.py  pyproject.toml  read_grid.py  requirements.txt  setup.py  spec_fit.py  spec_inter.py  utils.py  vel_fit.py  version.txt
.github/workflows/: test.yml
desi/: README  config.yaml  desi_fit.py  make_desi.sh
docs/: advanced_usage.rst  api_reference.rst  conf.py  index.rst  installation.rst  requirements.txt  rvs_desi_fit.rst  rvs_make_ccf.rst  rvs_make_interpol.rst  rvs_make_nd.rst  rvs_read_grid.rst  template_preparation.rst  tutorial.rst
examples/: test1.py
sdss/: make_sdss.sh
surveys/: mask_phoenix_grid.sh
tests/: accuracy.py  accuracy_test.py  config.yaml  gen_test_templ.sh  gen_test_templ1.sh  gen_test_templ_grid.sh  make_sdss_templ.sh  make_templ.sh  make_templ1.sh  make_templ_nn.sh  mktemps.py  mktemps_grid.py  runall_accuracy.py  runall_accuracy_test.py  test.yaml  test1.py  test2.py  test_01template_creation.py  test_desi_fit.py  test_fit.py  test_fit1.py  test_fit2.py  test_fit_fake.py  test_fit_fake_grid.py  test_fit_nn.py  test_gpu.py  test_interp.py  test_read_grid_update.py  test_sdss.py  test_spline.py
weave/: make_weave.sh
(+50 files in other folders)
